--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A value object for a measurement",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha-webpack --webpack-config webpack.config.js ./test/*.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,22 @@
     "@deboertool/value-object-interface": "0.0.2",
     "@deboertool/vo-precision": "0.0.1",
     "@deboertool/vo-unit": "0.0.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-typescript": "^7.1.0",
+    "@babel/runtime": "^7.3.1",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.5",
+    "babel-loader": "^8.0.5",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "mocha-webpack": "^2.0.0-beta.0",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.2.4",
+    "webpack": "^4.29.0"
   }
 }
