--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "es6",
-    "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
-    "allowJs": true,
+    "target": "es5",
+    "module": "esnext",
+    // "allowSyntheticDefaultImports": true,
+    // "sourceMap": true,
+    // "allowJs": true,
+    // "diagnostics": true,
   },
-  "baseUrl": "src",
-  "files": [
-    "./test/measurement.spec.ts"
-  ]
+  "exclude": ["test/"]
 }
