--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "esnext",
-    // "allowSyntheticDefaultImports": true,
-    // "sourceMap": true,
-    // "allowJs": true,
-    // "diagnostics": true,
+    "target": "es6",
+    "module": "es6",
+    "outDir": "./dist",
+    "declaration": true
   },
-  "exclude": ["test/"]
+  "include": [
+    "src/**/*"
+  ],
 }
