--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "es6",
+    "module": "commonjs",
     "outDir": "./dist",
-    "declaration": true,
-    "baseUrl": "src"
+    "declaration": true
   },
   "include": [
     "src/**/*"
